# sc_plot

./: README.md  pyproject.toml
src/sc_plot/: main.py
